fix: iframe and dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,14 @@ section:has(> .v-conversation) > .v-conversation {
   height: 100%;
 }
 
+.v-task-timeline {
+  padding: 0;
+}
+
+section section:has(.v-task-timeline) {
+  padding: 0;
+}
+
 .v-mail-list * {
   border-color: var(--t-table-accent-background-color) !important;
 }
@@ -89,7 +97,8 @@ section:has(> .v-conversation) > .v-conversation {
 
 .v-mail-list tbody:hover tr {
   background-color: #ebf1fa !important;
-  background-color: color-mix(in srgb, #3b71ca, #ffffff 90%) !important;
+  /*background-color: 
+  color-mix(in srgb, #3b71ca, #ffffff 90%) !important;*/
   transition: 0.1s;
 }
 
@@ -105,4 +114,14 @@ div:has(> .v-mail-view) {
 
 .v-mail-view {
   min-height: 300px;
+}
+
+html[data-bs-theme=dark] .v-mail-list * {
+  border-color: var(--t-border-color) !important;
+}
+html[data-bs-theme=dark] .v-mail-list .td-datagrid-rs td {
+  background-color: var(--content-background-hover-color) !important;
+}
+html[data-bs-theme=dark] .v-mail-list tbody:hover tr {
+  background-color: var(--content-background-hover-color) !important;
 }
